# tts-dictator

./: README.md  pyproject.toml  requirements.txt
data/: test.txt
src/: cli.py  test.py  utils.py
src/dicts/: base.py  mix.py  zdic.py
src/speakers/: base.py  google.py  paddle.py  paddle_speech.py
src/ui/: main.ui  x.py  z.py
tests/: test.sh
